--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -944,6 +944,12 @@ multiTool.deleteSelected=Delete Selected
 multiTool.downloadAll=Export
 multiTool.downloadSelected=Export Selected
 
+multiTool.insertPageBreak=Insert Page Break
+multiTool.addFile=Add File
+multiTool.rotateLeft=Rotate Left
+multiTool.rotateRight=Rotate Right
+multiTool.split=Split
+
 #multiTool-advert
 multiTool-advert.message=This feature is also available in our <a href="{0}">multi-tool page</a>. Check it out for enhanced page-by-page UI and additional features!
 
@@ -1152,6 +1158,99 @@ split-by-size-or-count.title=Split PDF by Size or Count
 split-by-size-or-count.header=Split PDF by Size or Count
 split-by-size-or-count.type.label=Select Split Type
 split-by-size-or-count.type.size=By Size
+split-by-size-or-count.type.pageCount=By Page Count
+split-by-size-or-count.type.docCount=By Document Count
+split-by-size-or-count.value.label=Enter Value
+split-by-size-or-count.value.placeholder=Enter size (e.g., 2MB or 3KB) or count (e.g., 5)
+split-by-size-or-count.submit=Submit
+
+
+#overlay-pdfs
+overlay-pdfs.header=Overlay PDF Files
+overlay-pdfs.baseFile.label=Select Base PDF File
+overlay-pdfs.overlayFiles.label=Select Overlay PDF Files
+overlay-pdfs.mode.label=Select Overlay Mode
+overlay-pdfs.mode.sequential=Sequential Overlay
+overlay-pdfs.mode.interleaved=Interleaved Overlay
+overlay-pdfs.mode.fixedRepeat=Fixed Repeat Overlay
+overlay-pdfs.counts.label=Overlay Counts (for Fixed Repeat Mode)
+overlay-pdfs.counts.placeholder=Enter comma-separated counts (e.g., 2,3,1)
+overlay-pdfs.position.label=Select Overlay Position
+overlay-pdfs.position.foreground=Foreground
+overlay-pdfs.position.background=Background
+overlay-pdfs.submit=Submit
+
+
+#split-by-sections
+split-by-sections.title=Split PDF by Sections
+split-by-sections.header=Split PDF into Sections
+split-by-sections.horizontal.label=Horizontal Divisions
+split-by-sections.vertical.label=Vertical Divisions
+split-by-sections.horizontal.placeholder=Enter number of horizontal divisions
+split-by-sections.vertical.placeholder=Enter number of vertical divisions
+split-by-sections.submit=Split PDF
+split-by-sections.merge=Merge Into One PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
+
+#licenses
+licenses.nav=Licences
+licenses.title=3rd Party Licences
+licenses.header=3rd Party Licences
+licenses.module=Module
+licenses.version=Version
+licenses.license=Licence
+
+#survey
+survey.nav=Survey
+survey.title=Stirling-PDF Survey
+survey.description=Stirling-PDF has no tracking so we want to hear from our users to improve Stirling-PDF!
+survey.changes=Stirling-PDF has changed since the last survey! To find out more please check our blog post here:
+survey.changes2=With these changes we are getting paid business support and funding
+survey.please=Please consider taking our survey to have input on the future of Stirling-PDF!
+survey.disabled=(Survey popup will be disabled in following updates but available at foot of page)
+survey.button=Take Survey
+survey.dontShowAgain=Don't show again
+
+
+#error
+error.sorry=Sorry for the issue!
+error.needHelp=Need help / Found an issue?
+error.contactTip=If you're still having trouble, don't hesitate to reach out to us for help. You can submit a ticket on our GitHub page or contact us through Discord:
+error.404.head=404 - Page Not Found | Oops, we tripped in the code!
+error.404.1=We can't seem to find the page you're looking for.
+error.404.2=Something went wrong
+error.github=Submit a ticket on GitHub
+error.showStack=Show Stack Trace
+error.copyStack=Copy Stack Trace
+error.githubSubmit=GitHub - Submit a ticket
+error.discordSubmit=Discord - Submit Support post
+
+
+#remove-image
+removeImage.title=Remove image
+removeImage.header=Remove image
+removeImage.removeImage=Remove image
+removeImage.submit=Remove image
+
+
+splitByChapters.title=Split PDF by Chapters
+splitByChapters.header=Split PDF by Chapters
+splitByChapters.bookmarkLevel=Bookmark Level
+splitByChapters.includeMetadata=Include Metadata
+splitByChapters.allowDuplicates=Allow Duplicates
+splitByChapters.desc.1=This tool splits a PDF file into multiple PDFs based on its chapter structure.
+splitByChapters.desc.2=Bookmark Level: Choose the level of bookmarks to use for splitting (0 for top-level, 1 for second-level, etc.).
+splitByChapters.desc.3=Include Metadata: If checked, the original PDF's metadata will be included in each split PDF.
+splitByChapters.desc.4=Allow Duplicates: If checked, allows multiple bookmarks on the same page to create separate PDFs.
+splitByChapters.submit=Split PDFsplit-by-size-or-count.type.size=By Size
 split-by-size-or-count.type.pageCount=By Page Count
 split-by-size-or-count.type.docCount=By Document Count
 split-by-size-or-count.value.label=Enter Value
