Update messages_de_DE.properties (#162)
* Update messages_de_DE.properties

* Update messages_de_DE.properties

--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -1,10 +1,11 @@
 ###########
 # Generic #
 ###########
-# the direction that the language is written (ltr=left to right, rtl = right to left)
+# the direction that the language is written (ltr = left to right, rtl = right to left)
 language.direction=ltr
-
-pdfPrompt=Select PDF(s)
+addPageNumbers.fontSize=Schriftgröße
+addPageNumbers.fontName=Schriftart
+pdfPrompt=PDF(s) auswählen
 multiPdfPrompt=PDFs auswählen(2+)
 multiPdfDropPrompt=Wählen Sie alle gewünschten PDFs aus (oder ziehen Sie sie per Drag & Drop hierhin)
 imgPrompt=Wählen Sie ein Bild
@@ -75,8 +76,18 @@ donate=Spenden
 color=Farbe
 sponsor=Sponsor
 info=Informationen
+pro=Pro
+page=Seite
+pages=Seiten
+loading=Laden...
+addToDoc=In Dokument hinzufügen
+reset=Zurücksetzen
 
-
+legal.privacy=Datenschutz
+legal.terms=AGB
+legal.accessibility=Barrierefreiheit
+legal.cookie=Cookie-Richtlinie
+legal.impressum=Impressum
 
 ###############
 #   Pipeline  #
@@ -103,8 +114,24 @@ pipelineOptions.pipelineHeader=Pipeline:
 pipelineOptions.saveButton=Herunterladen
 pipelineOptions.validateButton=Validieren
 
+########################
+#  ENTERPRISE EDITION  #
+########################
+enterpriseEdition.button=Auf Pro-Version umsteigen
+enterpriseEdition.warning=Diese Funktion ist nur für Pro-Nutzer verfügbar.
+enterpriseEdition.yamlAdvert=Stirling-PDF Pro unterstützt YAML Konfigurationsdateien, SSO und weitere Funktionen.
+enterpriseEdition.ssoAdvert=Suchen Sie weitere Funktionen in der Benutzerverwaltung? Steigen Sie auf die Pro-Version um
 
 
+#################
+#  Analytics    #
+#################
+analytics.title=Möchten Sie Stirling-PDF verbessern?
+analytics.paragraph1=Stirling-PDF verfügt über Opt-in-Analytics, die uns helfen, das Produkt zu verbessern. Wir zeichnen keine persönlichen Informationen oder Dateiinhalte auf.
+analytics.paragraph2=Bitte erwägen Sie die Analytics zu aktivieren, um Stirling-PDF beim Wachsen zu helfen und um unsere User besser zu verstehen.
+analytics.enable=Analytics aktivieren
+analytics.disable=Analytics deaktivieren
+analytics.settings=Sie können die Einstellungen für die Analytics in der config/settings.yml Datei bearbeiten
 
 #############
 #  NAVBAR   #
@@ -115,12 +142,14 @@ navbar.language=Sprachen
 navbar.settings=Einstellungen
 navbar.allTools=Werkzeuge
 navbar.multiTool=Multitools
+navbar.search=Suche
 navbar.sections.organize=Organisieren
 navbar.sections.convertTo=In PDF konvertieren
 navbar.sections.convertFrom=Konvertieren von PDF
 navbar.sections.security=Zeichen und Sicherheit
 navbar.sections.advance=Fortschrittlich
 navbar.sections.edit=Anzeigen und Bearbeiten
+navbar.sections.popular=Beliebt
 
 #############
 #  SETTINGS #
@@ -179,7 +208,7 @@ adminUserSettings.user=Benutzer
 adminUserSettings.addUser=Neuen Benutzer hinzufügen
 adminUserSettings.deleteUser=Benutzer löschen
 adminUserSettings.confirmDeleteUser=Soll der Benutzer gelöscht werden?
-adminUserSettings.confirmChangeUserStatus=Should the user be disabled/enabled?
+adminUserSettings.confirmChangeUserStatus=Soll der Benutzer deaktiviert/aktiviert werden?
 adminUserSettings.usernameInfo=Der Benutzername darf nur Buchstaben, Zahlen und die folgenden Sonderzeichen @._+- enthalten oder muss eine gültige E-Mail-Adresse sein.
 adminUserSettings.roles=Rollen
 adminUserSettings.role=Rolle
@@ -194,12 +223,12 @@ adminUserSettings.submit=Benutzer speichern
 adminUserSettings.changeUserRole=Benutzerrolle ändern
 adminUserSettings.authenticated=Authentifiziert
 adminUserSettings.editOwnProfil=Eigenes Profil bearbeiten
-adminUserSettings.enabledUser=enabled user
-adminUserSettings.disabledUser=disabled user
-adminUserSettings.activeUsers=Active Users:
-adminUserSettings.disabledUsers=Disabled Users:
-adminUserSettings.totalUsers=Total Users:
-adminUserSettings.lastRequest=Last Request
+adminUserSettings.enabledUser=aktivierter Benutzer
+adminUserSettings.disabledUser=deaktivierter Benutzer
+adminUserSettings.activeUsers=Aktive Benutzer:
+adminUserSettings.disabledUsers=Deaktivierte Benutzer:
+adminUserSettings.totalUsers=Gesamtzahl der Benutzer:
+adminUserSettings.lastRequest=Letzte Anfrage
 
 
 database.title=Datenbank Import/Export
@@ -217,6 +246,9 @@ database.importIntoDatabaseSuccessed=Import in die Datenbank erfolgreich
 database.fileNotFound=Datei nicht gefunden
 database.fileNullOrEmpty=Datei darf nicht null oder leer sein
 database.failedImportFile=Dateiimport fehlgeschlagen
+
+session.expired=Ihre Sitzung ist abgelaufen. Bitte laden Sie die Seite neu und versuchen Sie es erneut.
+session.refreshPage=Refresh Page
 
 #############
 # HOME-PAGE #
@@ -365,7 +397,7 @@ certSign.tags=authentifizieren,pem,p12,offiziell,verschlüsseln
 
 home.removeCertSign.title=Zertifikatsignatur entfernen
 home.removeCertSign.desc=Zertifikatsignatur aus PDF entfernen
-removeCertSign.tags=authentifizieren,PEM,P12,offiziell,entschlüsseln,decrypt
+removeCertSign.tags=authentifizieren,PEM,P12,offiziell,entschlüsseln
 
 home.pageLayout.title=Mehrseitiges Layout
 home.pageLayout.desc=Mehrere Seiten eines PDF zu einer Seite zusammenführen
@@ -375,7 +407,7 @@ home.scalePages.title=Seitengröße/Skalierung anpassen
 home.scalePages.desc=Größe/Skalierung der Seite und/oder des Inhalts ändern
 scalePages.tags=größe ändern,ändern,dimensionieren,anpassen
 
-home.pipeline.title=Pipeline (Fortgeschritten)
+home.pipeline.title=Pipeline
 home.pipeline.desc=Mehrere Aktionen auf ein PDF anwenden, definiert durch ein Pipeline Skript
 pipeline.tags=automatisieren,sequenzieren,skriptgesteuert,batch prozess
 
@@ -476,6 +508,31 @@ home.removeImagePdf.desc=Bild aus PDF entfernen, um die Dateigröße zu verringe
 removeImagePdf.tags=bild entfernen,seitenoperationen,back end,server side
 
 
+home.splitPdfByChapters.title=PDF-Datei nach Kapiteln aufteilen
+home.splitPdfByChapters.desc=Aufteilung einer PDF-Datei in mehrere Dateien auf Basis der Kapitelstruktur.
+splitPdfByChapters.tags=aufteilen,kapitel,lesezeichen,organisieren
+
+#replace-invert-color
+replace-color.title=Farbe Ersetzen-Invertieren
+replace-color.header=Farb-PDF Ersetzen-Invertieren
+home.replaceColorPdf.title=Farbe ersetzen und invertieren
+home.replaceColorPdf.desc=Ersetzen Sie die Farbe des Texts und Hintergrund der PDF-Datei und invertieren Sie die komplette Farbe der PDF-Datei, um die Dateigröße zu reduzieren
+replaceColorPdf.tags=Farbe ersetzen,Seiteneinstellungen,Backend,Serverseite
+replace-color.selectText.1=Ersetzen oder Invertieren von Farboptionen
+replace-color.selectText.2=Standard(Standardfarben mit hohem Kontrast)
+replace-color.selectText.3=Benutzerdefiniert(Benutzerdefinierte Farben)
+replace-color.selectText.4=Vollinvertierung(Invertierung aller Farben)
+replace-color.selectText.5=Farboptionen mit hohem Kontrast
+replace-color.selectText.6=Weißer Text auf schwarzem Hintergrund
+replace-color.selectText.7=Schwarzer Text auf weißem Hintergrund
+replace-color.selectText.8=Gelber Text auf schwarzem Hintergrund
+replace-color.selectText.9=Grüner Text auf schwarzem Hintergrund
+replace-color.selectText.10=Textfarbe auswählen
+replace-color.selectText.11=Hintergrundfarbe auswählen
+replace-color.submit=Ersetzen
+
+
+
 ###########################
 #                         #
 #       WEB PAGES         #
@@ -499,7 +556,9 @@ login.oauth2AccessDenied=Zugriff abgelehnt
 login.oauth2InvalidTokenResponse=Ungültige Token-Antwort
 login.oauth2InvalidIdToken=Ungültiges ID-Token
 login.userIsDisabled=Benutzer ist deaktiviert, die Anmeldung ist mit diesem Benutzernamen derzeit gesperrt. Bitte wenden Sie sich an den Administrator.
-
+login.alreadyLoggedIn=Sie sind bereits an
+login.alreadyLoggedIn2=Geräten angemeldet. Bitte melden Sie sich dort ab und versuchen es dann erneut.
+login.toManySessions=Sie haben zu viele aktive Sitzungen
 
 #auto-redact
 autoRedact.title=Automatisch zensieren/schwärzen
@@ -649,7 +708,7 @@ autoSplitPDF.header=PDF automatisch teilen
 autoSplitPDF.description=Drucken Sie, fügen Sie ein, scannen Sie, laden Sie hoch und lassen Sie uns Ihre Dokumente automatisch trennen. Kein manuelles Sortieren erforderlich.
 autoSplitPDF.selectText.1=Drucken Sie einige Trennblätter aus (schwarz/weiß ist ausreichend).
 autoSplitPDF.selectText.2=Scannen Sie alle Dokumente auf einmal, indem Sie das Trennblatt zwischen die Dokumente einlegen.
-autoSplitPDF.selectText.3=Laden Sie die einzelne große gescannte PDF-Datei hoch und überlassen Sie Stirling PDF den Rest.
+autoSplitPDF.selectText.3=Laden Sie die einzelne große gescannte PDF-Datei hoch und überlassen Sie Stirling-PDF den Rest.
 autoSplitPDF.selectText.4=Trennseiten werden automatisch erkannt und entfernt, so dass ein sauberes Enddokument garantiert ist.
 autoSplitPDF.formPrompt=PDF mit Stirling-PDF Seitentrennern hochladen:
 autoSplitPDF.duplexMode=Duplex-Modus (Scannen von Vorder- und Rückseite)
@@ -674,6 +733,7 @@ pageLayout.submit=Abschicken
 scalePages.title=Seitengröße anpassen
 scalePages.header=Seitengröße anpassen
 scalePages.pageSize=Format der Seiten des Dokuments
+scalePages.keepPageSize=Originalgröße beibehalten
 scalePages.scaleFactor=Zoomstufe (Ausschnitt) einer Seite
 scalePages.submit=Abschicken
 
@@ -693,6 +753,7 @@ certSign.showSig=Signatur anzeigen
 certSign.reason=Grund
 certSign.location=Standort
 certSign.name=Name
+certSign.showLogo=Logo anzeigen
 certSign.submit=PDF signieren
 
 
@@ -727,6 +788,9 @@ compare.highlightColor.2=Highlight-Farbe 2:
 compare.document.1=Dokument 1
 compare.document.2=Dokument 2
 compare.submit=Vergleichen
+compare.complex.message=Eines oder beide Dokumente sind sehr groß, dadurch kann die Genauigkeit des Vergleichs kann beeinträchtigt werden.
+compare.large.file.message=Eines oder beide Dokumente sind zu groß, um verarbeitet zu werden
+compare.no.text.message=Ein oder beide ausgewählten PDFs enthalten keine Textinhalt. Wählen Sie bitte PDFs mit Text für die Vergleichsanalyse.
 
 #BookToPDF
 BookToPDF.title=Bücher und Comics zu PDF
@@ -749,6 +813,11 @@ sign.draw=Signatur zeichnen
 sign.text=Texteingabe
 sign.clear=Leeren
 sign.add=Signieren
+sign.saved=Gespeicherte Signaturen
+sign.save=Signature speichern
+sign.personalSigs=Persönliche Signaturen
+sign.sharedSigs=Geteilte Signaturen
+sign.noSavedSigs=Es wurden keine gespeicherten Signaturen gefunden
 
 
 #repair
@@ -775,7 +844,7 @@ ScannerImageSplit.selectText.7=Minimaler Konturbereich:
 ScannerImageSplit.selectText.8=Legt den minimalen Konturbereichsschwellenwert für ein Foto fest
 ScannerImageSplit.selectText.9=Randgröße:
 ScannerImageSplit.selectText.10=Legt die Größe des hinzugefügten und entfernten Randes fest, um weiße Ränder in der Ausgabe zu verhindern (Standard: 1).
-ScannerImageSplit.info=Python is not installed. It is required to run.
+ScannerImageSplit.info=Python ist nicht installiert. Es ist zum Ausführen erforderlich.
 
 
 #OCR
@@ -802,7 +871,7 @@ ocr.submit=PDF mit OCR verarbeiten
 extractImages.title=Bilder extrahieren
 extractImages.header=Bilder extrahieren
 extractImages.selectText=Wählen Sie das Bildformat aus, in das extrahierte Bilder konvertiert werden sollen
-extractImages.allowDuplicates=Save duplicate images
+extractImages.allowDuplicates=Doppelte Bilder speichern
 extractImages.submit=Extrahieren
 
 
@@ -866,6 +935,17 @@ pdfOrganiser.placeholder=(z.B. 1,3,2 oder 4-8,2,10-12 oder 2n-1)
 multiTool.title=PDF-Multitool
 multiTool.header=PDF-Multitool
 multiTool.uploadPrompts=Dateiname
+multiTool.selectAll=Alle auswählen
+multiTool.deselectAll=Auswahl aufheben
+multiTool.selectPages=Seiten auswählen
+multiTool.selectedPages=Ausgewählte Seiten
+multiTool.page=Seite
+multiTool.deleteSelected=Auswahl löschen
+multiTool.downloadAll=Downloaden
+multiTool.downloadSelected=Auswahl downloaden
+
+#multiTool-advert
+multiTool-advert.message=Diese Funktion ist auch auf unserer <a href="{0}">PDF-Multitool-Seite</a> verfügbar. Probieren Sie sie aus, denn sie bietet eine verbesserte Benutzeroberfläche und zusätzliche Funktionen!
 
 #view pdf
 viewPdf.title=PDF anzeigen
@@ -927,7 +1007,7 @@ pdfToImage.color=Farbe
 pdfToImage.grey=Graustufen
 pdfToImage.blackwhite=Schwarzweiß (Datenverlust möglich!)
 pdfToImage.submit=Umwandeln
-pdfToImage.info=Python is not installed. Required for WebP conversion.
+pdfToImage.info=Python ist nicht installiert. Erforderlich für die WebP-Konvertierung.
 
 
 #addPassword
@@ -964,7 +1044,7 @@ watermark.selectText.6=höheSpacer (vertikaler Abstand zwischen den einzelnen Wa
 watermark.selectText.7=Deckkraft (0% - 100 %):
 watermark.selectText.8=Wasserzeichen Typ:
 watermark.selectText.9=Wasserzeichen-Bild:
-watermark.selectText.10=Convert PDF to PDF-Image
+watermark.selectText.10=PDF in PDF-Bild konvertieren
 watermark.submit=Wasserzeichen hinzufügen
 watermark.type.1=Text
 watermark.type.2=Bild
@@ -1017,7 +1097,7 @@ changeMetadata.submit=Ändern
 #pdfToPDFA
 pdfToPDFA.title=PDF zu PDF/A
 pdfToPDFA.header=PDF zu PDF/A
-pdfToPDFA.credit=Dieser Dienst verwendet OCRmyPDF für die PDF/A-Konvertierung
+pdfToPDFA.credit=Dieser Dienst verwendet ghostscript für die PDF/A-Konvertierung
 pdfToPDFA.submit=Konvertieren
 pdfToPDFA.tip=Dieser Dienst kann nur einzelne Eingangsdateien verarbeiten.
 pdfToPDFA.outputFormat=Ausgabeformat
@@ -1126,6 +1206,8 @@ licenses.license=Lizenz
 survey.nav=Umfrage
 survey.title=Stirling-PDF-Umfrage
 survey.description=Stirling-PDF hat kein Tracking, daher möchten wir von unseren Benutzern hören, wie wir Stirling-PDF verbessern können!
+survey.changes=Stirling-PDF hat sich seit der letzten Umfrage verändert! Mehr Informationen finden Sie bitte in unserem Blog-Beitrag hier:
+survey.changes2=Mit diesen Änderungen erhalten wir beauftragte Geschäftsunterstützung und Finanzierung
 survey.please=Bitte nehmen Sie an unserer Umfrage teil!
 survey.disabled=(Das Umfrage-Popup wird in folgenden Updates deaktiviert, ist aber am Fuß der Seite verfügbar.)
 survey.button=Umfrage durchführen
@@ -1147,7 +1229,19 @@ error.discordSubmit=Discord - Unterstützungsbeitrag einreichen
 
 
 #remove-image
-removeImage.title=Remove image
-removeImage.header=Remove image
-removeImage.removeImage=Remove image
-removeImage.submit=Remove image
+removeImage.title=Bild entfernen
+removeImage.header=Bild entfernen
+removeImage.removeImage=Bild entfernen
+removeImage.submit=Bild entfernen
+
+
+splitByChapters.title=PDF nach Kapiteln aufteilen
+splitByChapters.header=PDF nach Kapiteln aufteilen
+splitByChapters.bookmarkLevel=Lesezeichenebene
+splitByChapters.includeMetadata=Metadaten einschließen
+splitByChapters.allowDuplicates=Duplikate erlauben
+splitByChapters.desc.1=Dieses Werkzeug teilt eine PDF-Datei auf der Grundlage ihrer Kapitelstruktur in mehrere PDF-Dateien auf.
+splitByChapters.desc.2=Lesezeichenebene: Wählen Sie die Ebene der Lesezeichen, die für die Aufteilung verwendet werden soll (0 für die erste Ebene, 1 für die zweite Ebene usw.).
+splitByChapters.desc.3=Metadaten einschließen: Wenn diese Option aktiviert ist, werden die Metadaten der ursprünglichen PDF-Datei in jede aufgeteilte PDF-Datei übernommen.
+splitByChapters.desc.4=Duplikate erlauben: Wenn diese Option aktiviert ist, können mehrere Lesezeichen auf derselben Seite separate PDF Dateien erstellen.
+splitByChapters.submit=PDF teilen
