Update messages_en_GB.properties (#163)

--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -1234,7 +1234,7 @@ removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
 
-
+#split
 splitByChapters.title=Split PDF by Chapters
 splitByChapters.header=Split PDF by Chapters
 splitByChapters.bookmarkLevel=Bookmark Level
