--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -1235,6 +1235,7 @@ error.showStack=Show Stack Trace
 error.copyStack=Copy Stack Trace
 error.githubSubmit=GitHub - Submit a ticket
 error.discordSubmit=Discord - Submit Support post
+error.test=Test
 
 
 #remove-image
