--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -13,7 +13,7 @@ genericSubmit=Absenden
 processTimeWarning=Achtung: Abhängig von der Dateigröße kann dieser Prozess bis zu einer Minute dauern
 pageOrderPrompt=Seitenreihenfolge (Geben Sie eine durch Komma getrennte Liste von Seitenzahlen ein):
 pageSelectionPrompt=Benutzerdefinierte Seitenauswahl (Geben Sie eine durch Kommas getrennte Liste von Seitenzahlen 1,5,6 oder Funktionen wie 2n+1 ein):
-goToPage=Los
+goToPage =Los
 true=Wahr
 false=Falsch
 unknown=Unbekannt
@@ -138,12 +138,12 @@ analytics.settings=Sie können die Einstellungen für die Analytics in der confi
 #############
 navbar.favorite=Favoriten
 navbar.darkmode=Dunkler Modus
-navbar.language=Sprachen
+navbar.language=Sprache
 navbar.settings=Einstellungen
 navbar.allTools=Werkzeuge
 navbar.multiTool=Multitools
 navbar.search=Suche
-navbar.sections.organize=Organisieren
+navbar.sections.organize=organisieren
 navbar.sections.convertTo=In PDF konvertieren
 navbar.sections.convertFrom=Konvertieren von PDF
 navbar.sections.security=Zeichen und Sicherheit
@@ -952,6 +952,7 @@ multiTool.split=Split
 multiTool.moveLeft=Move Left
 multiTool.moveRight=Move Right
 multiTool.delete=Delete
+multiTool.dragDropMessage=Page(s) Selected
 
 #multiTool-advert
 multiTool-advert.message=Diese Funktion ist auch auf unserer <a href="{0}">PDF-Multitool-Seite</a> verfügbar. Probieren Sie sie aus, denn sie bietet eine verbesserte Benutzeroberfläche und zusätzliche Funktionen!
@@ -1234,6 +1235,7 @@ error.github=Ein Ticket auf GitHub einreichen
 error.showStack=Stack-Trace anzeigen
 error.copyStack=Stack-Trace kopieren
 error.githubSubmit=GitHub - Ein Ticket einreichen
+error.test=Test Error
 error.discordSubmit=Discord - Unterstützungsbeitrag einreichen
 
 
@@ -1242,6 +1244,7 @@ removeImage.title=Bild entfernen
 removeImage.header=Bild entfernen
 removeImage.removeImage=Bild entfernen
 removeImage.submit=Bild entfernen
+
 
 splitByChapters.title=PDF nach Kapiteln aufteilen
 splitByChapters.header=PDF nach Kapiteln aufteilen
