--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -952,6 +952,7 @@ multiTool.split=Split
 multiTool.moveLeft=Move Left
 multiTool.moveRight=Move Right
 multiTool.delete=Delete
+multiTool.dragDropMessage=Page(s) Selected
 
 #multiTool-advert
 multiTool-advert.message=This feature is also available in our <a href="{0}">multi-tool page</a>. Check it out for enhanced page-by-page UI and additional features!
@@ -1235,7 +1236,6 @@ error.showStack=Show Stack Trace
 error.copyStack=Copy Stack Trace
 error.githubSubmit=GitHub - Submit a ticket
 error.discordSubmit=Discord - Submit Support post
-error.test=Test
 
 
 #remove-image
@@ -1243,6 +1243,7 @@ removeImage.title=Remove image
 removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
+
 
 splitByChapters.title=Split PDF by Chapters
 splitByChapters.header=Split PDF by Chapters
