--- a/src/main/resources/messages_da_DK.properties
+++ b/src/main/resources/messages_da_DK.properties
@@ -16,6 +16,7 @@ pageSelectionPrompt=Brugerdefineret sidevalg (indtast en kommasepareret liste ov
 goToPage=Gå
 true=Sandt
 false=Falsk
+false=Falsk
 unknown=Ukendt
 save=Gem
 saveToBrowser=Gem i browser
