--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -1328,3 +1328,4 @@ validateSignature.cert.keyUsage=Key Usage
 validateSignature.cert.selfSigned=Self-Signed
 validateSignature.cert.bits=bits
 test=Test
+test1=Test1
