--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -82,6 +82,7 @@ pages=Pages
 loading=Loading...
 addToDoc=Add to Document
 reset=Reset
+apply=Apply
 
 legal.privacy=Privacy Policy
 legal.terms=Terms and Conditions
@@ -474,6 +475,10 @@ home.autoRedact.title=Auto Redact
 home.autoRedact.desc=Auto Redacts(Blacks out) text in a PDF based on input text
 autoRedact.tags=Redact,Hide,black out,black,marker,hidden
 
+home.redact.title=Manual Redaction
+home.redact.desc=Redacts a PDF based on selected text, drawn shapes and/or selected page(s)
+redact.tags=Redact,Hide,black out,black,marker,hidden,manual
+
 home.tableExtraxt.title=PDF to CSV
 home.tableExtraxt.desc=Extracts Tables from a PDF converting it to CSV
 tableExtraxt.tags=CSV,Table Extraction,extract,convert
@@ -561,6 +566,7 @@ login.oauth2invalidRequest=Invalid Request
 login.oauth2AccessDenied=Access Denied
 login.oauth2InvalidTokenResponse=Invalid Token Response
 login.oauth2InvalidIdToken=Invalid Id Token
+login.relyingPartyRegistrationNotFound=No relying party registration found
 login.userIsDisabled=User is deactivated, login is currently blocked with this username. Please contact the administrator.
 login.alreadyLoggedIn=You are already logged in to
 login.alreadyLoggedIn2=devices. Please log out of the devices and try again.
@@ -578,6 +584,31 @@ autoRedact.customPaddingLabel=Custom Extra Padding
 autoRedact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
 autoRedact.submitButton=Submit
 
+#redact
+redact.title=Manual Redaction
+redact.header=Manual Redaction
+redact.submit=Redact
+redact.textBasedRedaction=Text based Redaction
+redact.pageBasedRedaction=Page-based Redaction
+redact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
+redact.pageRedactionNumbers.title=Pages
+redact.pageRedactionNumbers.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
+redact.redactionColor.title=Redaction Color
+redact.export=Export
+redact.upload=Upload
+redact.boxRedaction=Box draw redaction
+redact.zoom=Zoom
+redact.zoomIn=Zoom in
+redact.zoomOut=Zoom out
+redact.nextPage=Next Page
+redact.previousPage=Previous Page
+redact.toggleSidebar=Toggle Sidebar
+redact.showThumbnails=Show Thumbnails
+redact.showDocumentOutline=Show Document Outline (double-click to expand/collapse all items)
+redact.showAttatchments=Show Attachments
+redact.showLayers=Show Layers (double-click to reset all layers to the default state)
+redact.colourPicker=Colour Picker
+redact.findCurrentOutlineItem=Find current outline item
 
 #showJS
 showJS.title=Show Javascript
@@ -830,7 +861,7 @@ sign.first=First page
 sign.last=Last page
 sign.next=Next page
 sign.previous=Previous page
-
+sign.maintainRatio=Toggle maintain aspect ratio
 #repair
 repair.title=Repair
 repair.header=Repair PDFs
@@ -1041,6 +1072,7 @@ pdfToImage.grey=Greyscale
 pdfToImage.blackwhite=Black and White (May lose data!)
 pdfToImage.submit=Convert
 pdfToImage.info=Python is not installed. Required for WebP conversion.
+pdfToImage.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
 
 
 #addPassword
@@ -1284,6 +1316,8 @@ splitByChapters.submit=Split PDF
 fileChooser.click=Click
 fileChooser.or=or
 fileChooser.dragAndDrop=Drag & Drop
+fileChooser.dragAndDropPDF=Drag & Drop PDF file
+fileChooser.dragAndDropImage=Drag & Drop Image file
 fileChooser.hoveredDragAndDrop=Drag & Drop file(s) here
 
 #release notes
@@ -1327,4 +1361,3 @@ validateSignature.cert.version=Version
 validateSignature.cert.keyUsage=Key Usage
 validateSignature.cert.selfSigned=Self-Signed
 validateSignature.cert.bits=bits
-peter=pan
