Update messages_pl_PL.properties (#75)
* Update messages_pl_PL.properties

* Update messages_pl_PL.properties

* Update messages_pl_PL.properties

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -452,6 +452,9 @@ home.MarkdownToPDF.title=Markdown do PDF
 home.MarkdownToPDF.desc=Zapisuje dokument Markdown do PDF
 MarkdownToPDF.tags=znaczniki, treść internetowa, transformacja, konwertowanie
 
+home.PDFToMarkdown.title=PDF to Markdown
+home.PDFToMarkdown.desc=Converts any PDF to Markdown
+PDFToMarkdown.tags=markup,web-content,transformation,convert,md
 
 home.getPdfInfo.title=Pobierz informacje o pliku PDF
 home.getPdfInfo.desc=Pobiera wszelkie informacje o pliku PDF
@@ -645,6 +648,11 @@ MarkdownToPDF.submit=Konwertuj
 MarkdownToPDF.help=Prace trwają
 MarkdownToPDF.credit=Użyj WeasyPrint
 
+
+#pdf-to-markdown
+PDFToMarkdown.title=PDF To Markdown
+PDFToMarkdown.header=PDF To Markdown
+PDFToMarkdown.submit=Convert
 
 
 #url-to-pdf
@@ -933,7 +941,7 @@ fileToPDF.submit=Konwertuj na PDF
 compress.title=Kompresuj
 compress.header=Kompresuj PDF
 compress.credit=Ta usługa używa qpdf do kompresji/optymalizacji PDF.
-compress.selectText.1=Tryb ręczny - Od 1 do 4
+compress.selectText.1=Tryb ręczny - Od 1 do 5
 compress.selectText.1.1=In optimization levels 6 to 9, in addition to general PDF compression, image resolution is scaled down to further reduce file size. Higher levels result in stronger image compression (up to 50% of the original size), achieving greater size reduction but with potential quality loss in images.
 compress.selectText.2=Poziom optymalizacji:
 compress.selectText.3=4 (Duże dla obrazów tekstowych)
